force-app/main/default/objects/Vendor_Detail_Link__c/Vendor_Detail_Link__c.object-meta.xml
<CustomObject>
    <label>Vendor Detail</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Vendor Detail_Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>