force-app/main/default/objects/Vendor_Detail_Link__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brands__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>R00N700000022920EAA</relationshipName>
    <type>Lookup</type>
</CustomField>