force-app/main/default/objects/Vendor_Detail_Link__c/fields/MarketSource_Vendor_Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>MarketSource_Vendor_Detail_ID__c</fullName>
    <label>MarketSource Vendor Detail ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>