force-app/main/default/objects/Vendor_Detail_Link__c/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>Any changes here should also be made on Opportunity and Work Order</description>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADHESIVES</fullName>
            </value>
            <value>
                <fullName>AMENITIES</fullName>
            </value>
            <value>
                <fullName>AQUEOUS MEDIA</fullName>
            </value>
            <value>
                <fullName>AQUEOUS PRINTERS</fullName>
            </value>
            <value>
                <fullName>AUTODESK - PRODUCT</fullName>
            </value>
            <value>
                <fullName>AUTODESK SUBSCRIPTION - NEW</fullName>
            </value>
            <value>
                <fullName>AUTODESK SUBSCRIPTION - RENEWAL</fullName>
            </value>
            <value>
                <fullName>BAGS</fullName>
            </value>
            <value>
                <fullName>BINDERY</fullName>
            </value>
            <value>
                <fullName>BLANKETS</fullName>
            </value>
            <value>
                <fullName>BOND &amp; WRITING</fullName>
            </value>
            <value>
                <fullName>CAN LINERS</fullName>
            </value>
            <value>
                <fullName>CAN LINERS-PRIVATE BRAND</fullName>
            </value>
            <value>
                <fullName>CANNABIS PACKAGING</fullName>
            </value>
            <value>
                <fullName>CARBONLESS</fullName>
            </value>
            <value>
                <fullName>CHEMICALS</fullName>
            </value>
            <value>
                <fullName>CHEMICALS-PRIVATE BRAND</fullName>
            </value>
            <value>
                <fullName>CHIPBOARD</fullName>
            </value>
            <value>
                <fullName>COATED BOARD - ROLLS</fullName>
            </value>
            <value>
                <fullName>COATED BOARD - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED DOMESTIC - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED IMPORT - SHEETS</fullName>
            </value>
            <value>
                <fullName>COATED - ROLLS</fullName>
            </value>
            <value>
                <fullName>COMPUTER &amp; LAPTOP</fullName>
            </value>
            <value>
                <fullName>CORRUGATED</fullName>
            </value>
            <value>
                <fullName>CUSHIONING</fullName>
            </value>
            <value>
                <fullName>DESIGN</fullName>
            </value>
            <value>
                <fullName>DIGITAL PAPER</fullName>
            </value>
            <value>
                <fullName>DIGITAL PROOFING</fullName>
            </value>
            <value>
                <fullName>DISPENSERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>