force-app/main/default/objects/Vendor_Detail_Link__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Annual Opportunity Revenue amount that shows on the associated Opportunity.  The sum of Vendor sub-totals must be less than or equal to this amount.</inlineHelpText>
    <label>Total Opportunity Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>