force-app/main/default/objects/Vendor_Detail_Link__c/fields/Vendor_Category_SubTotal__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Category_SubTotal__c</fullName>
    <inlineHelpText>The annual revenue associated with this opportunity per vendor</inlineHelpText>
    <label>Opp Sub-Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>