force-app/main/default/objects/Vendor_Detail_Link__c/fields/Vendor_Target__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Vendor Target checkbox can only be updated by a ZM/RVP or above.  It is used to denote opportunities that are specific targets for the associated vendor.</inlineHelpText>
    <label>Vendor Target</label>
    <type>Checkbox</type>
</CustomField>