force-app/main/default/objects/Vendor_Detail_Link__c/fields/Vendorsinfo__c.field-meta.xml
<CustomField>
    <fullName>Vendorsinfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor_Detail__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>R00N70000001kf1SEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>